--- a/Cuda/cuda_handwrite_mlp/project/pytorch-check/sgd.ipynb
+++ b/Cuda/cuda_handwrite_mlp/project/pytorch-check/sgd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,89 +21,110 @@
     "train_dataset = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "test_dataset = datasets.MNIST(root='./data', train=False, download=True, transform=transform)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False)\n"
+    "train_loader = DataLoader(train_dataset, batch_size=1024, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=1024, shuffle=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/100], Loss: 2.2972\n",
+      "Epoch [11/100], Loss: 1.6696\n",
+      "Epoch [21/100], Loss: 1.6351\n",
+      "Epoch [31/100], Loss: 1.6255\n",
+      "Epoch [41/100], Loss: 1.6193\n",
+      "Epoch [51/100], Loss: 1.6147\n",
+      "Epoch [61/100], Loss: 1.6108\n",
+      "Epoch [71/100], Loss: 1.6073\n",
+      "Epoch [81/100], Loss: 1.6041\n",
+      "Epoch [91/100], Loss: 1.6010\n",
+      "Epoch [100/100], Loss: 1.5988\n",
+      "训练时间：284.93秒\n",
+      "Accuracy on the test set: 85.96%\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "# # Step 2: Define the model\n",
-    "# class MLP(nn.Module):\n",
-    "#     def __init__(self):\n",
-    "#         super(MLP, self).__init__()\n",
-    "#         self.fc1 = nn.Linear(28*28, 128)\n",
-    "#         self.fc2 = nn.Linear(128, 64)\n",
-    "#         self.fc3 = nn.Linear(64, 10)\n",
-    "#         self.relu = nn.ReLU()\n",
-    "#         self.softmax = nn.Softmax(dim=1)\n",
+    "# Step 2: Define the model\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc2 = nn.Linear(128, 64)\n",
+    "        self.fc3 = nn.Linear(64, 10)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.softmax = nn.Softmax(dim=1)\n",
     "\n",
-    "#     def forward(self, x):\n",
-    "#         x = x.view(-1, 28*28)\n",
-    "#         x = self.relu(self.fc1(x))\n",
-    "#         x = self.relu(self.fc2(x))\n",
-    "#         x = self.fc3(x)\n",
-    "#         x = self.softmax(x)\n",
-    "#         return x\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(-1, 28*28)\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        x = self.softmax(x)\n",
+    "        return x\n",
     "\n",
-    "# model = MLP()\n",
+    "model = MLP()\n",
     "\n",
-    "# # Step 3: Define loss function and optimizer\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
+    "# Step 3: Define loss function and optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
-    "# import time\n",
+    "import time\n",
     "\n",
-    "# # 开始计时\n",
-    "# start_time = time.time()\n",
+    "# 开始计时\n",
+    "start_time = time.time()\n",
     "\n",
     "\n",
     "\n",
-    "# # Step 4: Train the model\n",
-    "# num_epochs = 20\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     model.train()\n",
-    "#     running_loss = 0.0\n",
-    "#     for images, labels in train_loader:\n",
-    "#         optimizer.zero_grad()\n",
-    "#         outputs = model(images)\n",
-    "#         loss = criterion(outputs, labels)\n",
-    "#         loss.backward()\n",
-    "#         optimizer.step()\n",
-    "#         running_loss += loss.item() * images.size(0)\n",
-    "#     print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader.dataset):.4f}')\n",
+    "# Step 4: Train the model\n",
+    "num_epochs = 100\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    for images, labels in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item() * images.size(0)\n",
+    "    if epoch%10==0 or epoch==num_epochs - 1:\n",
+    "        print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(train_loader.dataset):.4f}')\n",
     "\n",
-    "# # 结束计时\n",
-    "# end_time = time.time()\n",
+    "# 结束计时\n",
+    "end_time = time.time()\n",
     "\n",
-    "# # 计算时间差\n",
-    "# elapsed_time = end_time - start_time\n",
+    "# 计算时间差\n",
+    "elapsed_time = end_time - start_time\n",
     "\n",
-    "# print(f\"训练时间：{elapsed_time:.2f}秒\")\n",
+    "print(f\"训练时间：{elapsed_time:.2f}秒\")\n",
     "\n",
-    "# # Step 5: Evaluate the model\n",
-    "# model.eval()\n",
-    "# correct = 0\n",
-    "# total = 0\n",
-    "# with torch.no_grad():\n",
-    "#     for images, labels in test_loader:\n",
-    "#         outputs = model(images)\n",
-    "#         _, predicted = torch.max(outputs.data, 1)\n",
-    "#         total += labels.size(0)\n",
-    "#         correct += (predicted == labels).sum().item()\n",
+    "# Step 5: Evaluate the model\n",
+    "model.eval()\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for images, labels in test_loader:\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += labels.size(0)\n",
+    "        correct += (predicted == labels).sum().item()\n",
     "\n",
-    "# print(f'Accuracy on the test set: {(100 * correct / total):.2f}%')\n",
+    "print(f'Accuracy on the test set: {(100 * correct / total):.2f}%')\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,13 +142,13 @@
     "                print(j, end=' ', file=file)\n",
     "\n",
     "            # break\n",
-    "        break\n",
+    "        # break\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,13 +168,6 @@
     "            # break\n",
     "        # break\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
