--- a/DeepLearning/D2L/code/test.ipynb
+++ b/DeepLearning/D2L/code/test.ipynb
@@ -1,65 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mynn(\n",
-      "  (sequential1): Sequential(\n",
-      "    (0): Conv2d(3, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-      "    (1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (2): Conv2d(32, 32, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-      "    (3): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (4): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1), padding=(2, 2))\n",
-      "    (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (6): Flatten(start_dim=1, end_dim=-1)\n",
-      "    (7): Linear(in_features=1024, out_features=64, bias=True)\n",
-      "    (8): Linear(in_features=64, out_features=10, bias=True)\n",
-      "  )\n",
-      "  (sequential2): Linear(in_features=10, out_features=10, bias=True)\n",
-      "  (classfication): Sequential(\n",
-      "    (0): Linear(in_features=10, out_features=10, bias=True)\n",
-      "    (1): Linear(in_features=10, out_features=10, bias=True)\n",
-      "    (2): Linear(in_features=10, out_features=10, bias=True)\n",
-      "  )\n",
-      ")\n"
-     ]
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn\n",
-    "\n",
-    "class Mynn(nn.Module):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.sequential1 = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels=3, out_channels=32, kernel_size=5, padding=2),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            nn.Conv2d(in_channels=32, out_channels=32, kernel_size=5, padding=2),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            nn.Conv2d(in_channels=32, out_channels=64, kernel_size=5, padding=2),\n",
-    "            nn.MaxPool2d(2),\n",
-    "            nn.Flatten(), # 将tensor张成一维张量\n",
-    "            nn.Linear(1024, 64),\n",
-    "            nn.Linear(64, 10)\n",
-    "        )\n",
-    "        self.sequential2 = nn.Linear(10,10)\n",
-    "        self.classfication = nn.Sequential(\n",
-    "            nn.Linear(10,10),\n",
-    "            nn.Linear(10,10),\n",
-    "            nn.Linear(10,10)\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "mynn = Mynn()\n",
-    "print(mynn)"
+    "from torch import nn"
    ]
   },
   {
@@ -68,27 +21,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "cpu\n",
-      "cuda:0\n",
-      "cuda:0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[[[ 0.,  0.,  1.],\n",
+       "          [ 0.,  4.,  6.],\n",
+       "          [ 4., 12.,  9.]]]], grad_fn=<ConvolutionBackward0>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(torch.cuda.device_count()) # 查询gpu数量\n",
+    "x = torch.arange(4.)\n",
+    "k = x.clone()\n",
     "\n",
-    "x = torch.arange(12., device=torch.device('cpu'))\n",
-    "print(x.device) # cpu\n",
+    "x = x.reshape(1,1,2,2)\n",
+    "k = k.reshape(1,1,2,2)\n",
     "\n",
-    "y = torch.arange(12., device=torch.device(f'cuda:{0}'))\n",
-    "print(y.device) # cuda:0\n",
+    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, bias=False)\n",
+    "tconv.weight.data = k\n",
+    "tconv(x)\n",
     "\n",
-    "x = x.cuda()\n",
-    "print(x.device) # cuda:0"
+    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, padding=1, bias=False)\n",
+    "tconv.weight.data = k\n",
+    "tconv(x)"
    ]
   }
  ],
