Added: Langchain notes

--- a/DeepLearning/D2L/code/test.ipynb
+++ b/DeepLearning/D2L/code/test.ipynb
@@ -17,18 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 0.,  0.,  1.],\n",
-       "          [ 0.,  4.,  6.],\n",
-       "          [ 4., 12.,  9.]]]], grad_fn=<ConvolutionBackward0>)"
+       "tensor([[[[0., 0., 0., 1.],\n",
+       "          [0., 0., 2., 3.],\n",
+       "          [0., 2., 0., 3.],\n",
+       "          [4., 6., 6., 9.]]]], grad_fn=<ConvolutionBackward0>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +45,7 @@
     "tconv.weight.data = k\n",
     "tconv(x)\n",
     "\n",
-    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, padding=1, bias=False)\n",
+    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, stride=2, bias=False)\n",
     "tconv.weight.data = k\n",
     "tconv(x)"
    ]
