Finished: RAG-ECNU

--- a/llm/ECNU-postgraduate-RAG/data/历史沿革.md
+++ b/llm/ECNU-postgraduate-RAG/data/历史沿革.md
@@ -3,7 +3,7 @@
 1985年：增设计算机软件与理论硕士点；
 1993年：计算机科学系加入理工学院；
 1998年：系统科学研究所连同其系统分析与集成专业博士点由数学系并入计算机科学系；
-1999年：“计算机科学系”更名为”计算机科学技术系”；
+1999年：“计算机科学系”更名为”计算机科学与技术系”；
 2001年：计算机科学技术系加入信息科学与技术学院；
 2003年：增设系统科学一级学科博士点和计算机系统结构专业硕士点；
 2006年：增设计算机科学与技术一级学科硕士点和计算机应用技术二级学科博士点；
