--- a/DeepLearning/D2L/code/test.ipynb
+++ b/DeepLearning/D2L/code/test.ipynb
@@ -7,47 +7,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn"
+    "from torch import nn \n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showplt(x, y,title, x_name, y_name):\n",
+    "    # Plot the signal\n",
+    "\tplt.figure(figsize=(10, 5))\n",
+    "\tplt.plot(x.numpy(), y.numpy())\n",
+    "\tplt.title(title)\n",
+    "\tplt.xlabel(x_name)\n",
+    "\tplt.ylabel(y_name)\n",
+    "\tplt.grid(True)\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = 1000\n",
+    "time = torch.arange(1, T + 1, dtype=torch.float32)\n",
+    "x = torch.sin(0.01 * time) + torch.normal(0, 0.2, (T,))\n",
+    "# sin(0.01x) + 噪声 \n",
+    "showplt(time, x, 'x vs. time', 'time', 'x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[0., 0., 0., 1.],\n",
-       "          [0., 0., 2., 3.],\n",
-       "          [0., 2., 0., 3.],\n",
-       "          [4., 6., 6., 9.]]]], grad_fn=<ConvolutionBackward0>)"
+       "torch.Size([1000])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.arange(4.)\n",
-    "k = x.clone()\n",
     "\n",
-    "x = x.reshape(1,1,2,2)\n",
-    "k = k.reshape(1,1,2,2)\n",
-    "\n",
-    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, bias=False)\n",
-    "tconv.weight.data = k\n",
-    "tconv(x)\n",
-    "\n",
-    "tconv = nn.ConvTranspose2d(1, 1, kernel_size=2, stride=2, bias=False)\n",
-    "tconv.weight.data = k\n",
-    "tconv(x)"
+    "\n"
    ]
   }
  ],
@@ -67,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
