--- a/DeepLearning/D2L/序列模型.md
+++ b/DeepLearning/D2L/序列模型.md
@@ -273,6 +273,102 @@ plt.ylabel('Frequency')
 
 #### 随机采样
 
+```python
+import random
+
+# subseq_len 序列长度（序列的时间步数num_steps）
+def seq_data_iter_random(corpus, batch_size, subseq_len):  
+
+	# 随机偏移 一个subseq长度以内的量
+    corpus = corpus[random.randint(0, subseq_len - 1):]
+
+	# 实际能够生成的subseq数量
+    num_subseqs = (len(corpus) - 1) // subseq_len
+    
+	
+	# 长度为subseq_len的子序列的起始索引
+    # [0, len, len*2, len*3, ...]
+    initial_indices = list(range(0, num_subseqs * subseq_len, subseq_len))
+    # 打乱位置 保证随机性
+    random.shuffle(initial_indices)
+
+    # 分配到各个batch中
+    num_batches = num_subseqs // batch_size
+
+    for i in range(0, batch_size * num_batches, batch_size):
+        
+        # [i, i + batch_size - 1]的索引为这个batch所有序列的起始坐标
+        # 剪出来
+        initial_indices_per_batch = initial_indices[i: i + batch_size]
+        
+        # 剪切出这一部分的序列
+        X = [corpus[j: j + subseq_len] for j in initial_indices_per_batch]
+        # 偏移一位 作为标签序列
+        Y = [corpus[j + 1: j + 1 + subseq_len] for j in initial_indices_per_batch]
+
+        # 提供迭代对象 
+        yield torch.tensor(X), torch.tensor(Y)
+    
+my_seq = list(range(35)) # [0,1,2,3...,34]
+
+# 每个子序列的长度为5 每个batch含2个数据
+for X, Y in seq_data_iter_random(my_seq, batch_size=2, subseq_len=5):
+    print('batch:\n')
+    print('X: ', X, '\nY:', Y)
+    
+'''
+batch:
+
+X:  tensor([[24, 25, 26, 27, 28],
+        [29, 30, 31, 32, 33]]) 
+Y: tensor([[25, 26, 27, 28, 29],
+        [30, 31, 32, 33, 34]])
+batch:
+
+X:  tensor([[19, 20, 21, 22, 23],
+        [14, 15, 16, 17, 18]]) 
+Y: tensor([[20, 21, 22, 23, 24],
+        [15, 16, 17, 18, 19]])
+batch:
+
+X:  tensor([[ 4,  5,  6,  7,  8],
+        [ 9, 10, 11, 12, 13]]) 
+Y: tensor([[ 5,  6,  7,  8,  9],
+        [10, 11, 12, 13, 14]])
+'''
+```
+
+
+
+#### 顺序分区
+
+- 有随机偏移，裁掉掉前后部分
+- 剩下部分按顺序进行顺序切分
+- 同一个batch内并不是连续，不同batch同一位置连续
+
+```python
+def seq_data_iter_sequential(corpus, batch_size, subseq_len):  
+
+    # 从随机偏移量开始划分序列
+    offset = random.randint(0, subseq_len)
+    num_tokens = ((len(corpus) - offset - 1) // batch_size) * batch_size
+    
+    # 裁掉前面的偏移 与尾部的多余部分
+    Xs = torch.tensor(corpus[offset: offset + num_tokens])
+    Ys = torch.tensor(corpus[offset + 1: offset + 1 + num_tokens])
+
+    # 按batch_size进行reshape 
+    # [ [a1, a2, a3], [b1, b2, b3] ]
+    # 返回[ [a1], [b1] ], [ [a2], [b2] ], [ [a3], [b3] ]
+    Xs, Ys = Xs.reshape(batch_size, -1), Ys.reshape(batch_size, -1)
+    
+    num_batches = Xs.shape[1] // subseq_len
+    for i in range(0, subseq_len * num_batches, subseq_len):
+        X = Xs[:, i: i + subseq_len]
+        Y = Ys[:, i: i + subseq_len]
+        yield X, Y
+```
+
 
 
 ## 序列模型
