--- a/DeepLearning/D2L/序列模型.md
+++ b/DeepLearning/D2L/序列模型.md
@@ -367,6 +367,28 @@ def seq_data_iter_sequential(corpus, batch_size, subseq_len):
         X = Xs[:, i: i + subseq_len]
         Y = Ys[:, i: i + subseq_len]
         yield X, Y
+        
+'''
+sequential_solution
+batch:
+
+X:  tensor([[ 0,  1,  2,  3,  4],
+        [17, 18, 19, 20, 21]]) 
+Y: tensor([[ 1,  2,  3,  4,  5],
+        [18, 19, 20, 21, 22]])
+batch:
+
+X:  tensor([[ 5,  6,  7,  8,  9],
+        [22, 23, 24, 25, 26]]) 
+Y: tensor([[ 6,  7,  8,  9, 10],
+        [23, 24, 25, 26, 27]])
+batch:
+
+X:  tensor([[10, 11, 12, 13, 14],
+        [27, 28, 29, 30, 31]]) 
+Y: tensor([[11, 12, 13, 14, 15],
+        [28, 29, 30, 31, 32]])
+'''
 ```
 
 
@@ -420,7 +442,322 @@ $$
 
 
 
+### 困惑度
+
+我们需要一个指标衡量生成的序列的好坏程度
+
+```python
+# 以It is raining进行预测
+
+'It is raining outside”（外面下雨了）' # 合理的
+
+'It is raining banana tree”（香蕉树下雨了）' # 不合理 但是单词拼写正确
+
+'It is raining piouw;kcj pwepoiut”（piouw;kcj pwepoiut下雨了）' # 完全错误
+```
+
+>   假设你在玩一个猜词游戏，每次你都需要从几个选项中猜测下一个词。如果你的猜测总是很准确，那么你对游戏的困惑度就很低。相反，如果你总是猜不中，那么你对游戏的困惑度就很高。
+
+模型的预测本质上是在词表中进行一个分类问题，因此我们可以使用交叉熵去表示
+
+假设一共预测了$n$次词元，我们计算其交叉熵的均值：
+$$
+\frac{1}{n}\sum -\log P(x_t|x_{t-1}, ..., x_1)
+$$
+由于历史问题，困惑度往往被定义为：
+$$
+\exp(-\frac{1}{n}\sum \log P(x_t|x_{t-1}, ..., x_1))
+$$
+
+>   困惑度的最好的理解是“下一个词元的实际选择数的调和平均数”。 
+>
+>   一般直接当作损失函数用
+
+-   最好情况，每次都是百分比的预测，则困惑度为1（exp(0) = 1）
+-   最坏情况，每次预测概率为0，则困惑度正无穷
+-   对于baseline，我们每次的预测采取对词元的均匀分布（随机猜测），则困惑度等于词元数量
+    -   先log一下再exp一下，可以粗略认为：困惑度代表每次需要从几个词中猜测
+    -   **因此我们的模型必须超过此困惑度**
+
+
+
+
+
 ## RNN
 
+![image-20240814170724072](./序列模型.assets/image-20240814170724072.png)
+
+$$
+H_t = \phi(X_tW_{xh} + H_{t-1}W_{hh} +b_h)
+$$
+
+-   每一层的隐状态：由本次的输入、上一层的隐状态和bias得到
+
+$$
+O_t = H_tW_{hq} + b_q
+$$
+
+-   输出层：处理一下当前层的隐状态即可
 
 
+
+### 代码 
+
+
+
+#### 数据处理
+
+回到最开始，不管我们使用的是随机采样或是顺序分区
+
+我们得到的张量：（批量大小，时间步数）
+
+但是对于RNN来说，（时间步数，批量大小）才是主流
+
+这个过程直接转置就可以完成
+
+
+
+-   优化计算效率
+    -   时间步数在最外层，方便我们按照时间步数进行寻址
+    -   方便在同一个时间维度上进行并行
+-   隐藏状态$H$需要随着时间步数进行更新，放在最外层比较清晰自然
+-   符合Pytorch等框架的习惯
+    -   `batch_first`：可以通过设置参数，让batch放到最前面，但没必要
+
+```python
+X = F.one_hot(inputs.T.long(), self.vocab_size) # 转置一下 进行one-hot编码
+X = X.to(torch.float32)
+```
+
+#### RNN
+
+```python
+input_size = 100   # 输入数据编码的维度
+hidden_size = 20   # 隐含层维度
+num_layers = 4     # 隐含层层数
+
+rnn = nn.RNN(input_size=input_size,hidden_size=hidden_size,num_layers=num_layers)
+
+seq_len = 10        # 句子长度
+batch_size = 2      
+
+x = torch.randn(seq_len,batch_size, input_size) 
+h0 = torch.zeros(num_layers, batch_size, hidden_size)
+
+out, h = rnn(x,h0)
+```
+
+对于`nn.RNN(input_size,hidden_size,num_layers)`：
+
+-   `input_size`：表示输入序列的每一个元素的维度（例如vocab有26个词元，进行one-hot后得到了维度26的张量，26即为`input_size`）
+-   `hidden_size`：RNN内置隐藏层的维度
+-   `num_layers`：RNN内置隐藏层的层数
+
+
+
+![image-20240814203746124](./序列模型.assets/image-20240814203746124.png)
+
+我们对得到输出`output`和隐状态`h`
+
+-   输出：`(num_steps, batch_size, hidden_size)`
+    -   每一个时间步数都会输出一组结果，故总共`num_steps`个`(batch_size, hidden_size)`张量
+    -   最后一层的隐藏层神经元都会有输出
+-   隐状态：`(num_layers, batch_size, hidden_size)`
+    -   我们会保留每一层的输出
+    -   以及每个批次、每个神经元的输出
+
+
+
+接下来我们可以实操，定义一个RNN模型：
+
+```python
+class RNNModel(nn.Module):
+    def __init__(self, vocab, **kwargs):
+        
+        super(RNNModel, self).__init__(**kwargs)
+        
+        self.vocab_size = len(vocab)
+        self.num_hiddens = 256
+    
+        self.rnn = nn.RNN(
+            input_size = self.vocab_size, # 输入数据的维度（28种字符）
+            hidden_size = self.num_hiddens,  # 隐藏层维度
+            num_layers = 1  # 隐藏层层数
+        )
+        
+        # 输出层 由rnn的隐藏层 预测-> 每一个vocab的概率
+        self.linear = nn.Linear(self.num_hiddens, self.vocab_size)
+        
+    def forward(self, inputs, state):
+        
+        # 数据处理
+        X = F.one_hot(inputs.T.long(), self.vocab_size)
+        X = X.to(torch.float32)
+        
+        # 得到输出和隐状态
+        Y, state = self.rnn(X, state)
+        # 经过输出层得到真实输出
+        output = self.linear(Y.reshape(-1, Y.shape[-1]))
+        return output, state       
+    
+    # 返回一个用于初始化隐状态的全0张量
+    def begin_state(self, batch_size, device):
+        return  torch.zeros(
+                (self.rnn.num_layers, batch_size, self.num_hiddens),
+                device=device
+            )
+        
+device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')
+net = RNNModel(vocab).to(device)
+
+```
+
+
+
+#### 预测
+
+```python
+'''续写prefix之后的内容'''
+def predict(prefix,num_preds = 30):
+   
+	# 初始化一个隐状态
+    # 因为只需要测一个序列，batch_size = 1
+    state = net.begin_state(batch_size=1, device=device)
+    outputs = [vocab[prefix[0]]] # 取出第一个词元
+	
+    # 预热期：把prefix内容依次送入，计算隐状态
+    for y in prefix[1:]: 
+        # 每次取outputs最后一个词元
+        _, state = net( torch.tensor([outputs[-1]]).reshape(1,1).to(device), state)
+        outputs.append(vocab[y]) 
+
+    for _ in range(num_preds):  # 预测num_preds步
+        y, state = net(torch.tensor([outputs[-1]]).reshape(1,1).to(device), state)
+        outputs.append(int(y.argmax(axis=1).reshape(1))) # 取出概率最大的词元
+    return ''.join([vocab.idx_to_token[i] for i in outputs]) # 转化成对应的词元文本
+    
+predict('time travel')
+# 未训练的时候应该会输出乱七八糟的字符
+
+```
+
+
+
+#### 训练
+
+```python
+def train_epoch(net, train_iter, loss, updater, device):
+
+    start = time.time()
+    training_loss, tokens = 0.0, 0
+
+    for X, Y in train_iter:
+		
+        # 初始化
+        state = net.begin_state(batch_size=X.shape[0], device=device)
+        
+        # 对应进行转置 X在forward里进行处理 这里不需要重复
+        y = Y.T.reshape(-1)
+        X, y = X.to(device), y.to(device)
+        
+        # 推理
+        y_hat, state = net(X, state)
+        
+        # x = [0,1,2,3,4]
+        # y = [1,2,3,4,5]
+        # yhat需要保证之前的内容、预测的最后一个字符都相同
+        l = loss(y_hat, y.long()).mean()
+        
+        updater.zero_grad()
+        l.backward()
+        grad_clipping(net, 1) # 梯度裁剪（下文）
+        updater.step()
+
+        training_loss += l * y.numel()
+        tokens += y.numel()
+	
+    # 计算困惑度与推理速度
+    return math.exp(training_loss / tokens), tokens / (time.time() - start)
+
+
+def train(net, train_iter, vocab, lr, num_epochs, device):
+
+    pltx = []
+    plty = []
+    
+    loss = nn.CrossEntropyLoss()
+    updater = torch.optim.SGD(net.parameters(), lr)
+
+    for epoch in range(num_epochs):
+        ppl, speed = train_epoch(
+            net, train_iter, loss, updater, device)
+        
+        if (epoch + 1) % 20 == 0:
+            print(predict('time traveller'))
+            print(f'epoch = {epoch+1}/{num_epochs} perplexity {ppl:.1f}')
+            pltx.append(epoch + 1)
+            plty.append(ppl)
+            
+            
+    print('ending')
+    print(f'perplexity {ppl:.1f}, {speed:.1f} tokens/sec on {str(device)}')
+    print(predict('time traveller'))
+    print(predict('traveller'))
+    
+    showplt(pltx, plty, 'Training', 'Epoch', 'Perplexity')
+train(net, train_iter, vocab, lr, num_epochs, device)
+```
+
+
+
+#### 梯度裁剪
+
+长度为$T$的序列，我们在反向传播时，会造成一个$O(T)$的矩阵乘法链
+
+非常容易导致梯度爆炸、梯度消失
+
+>   ReLU可以避免梯度消失问题（当激活函数的梯度过小，无法有效更新参数），从而保持梯度的有效传递
+
+梯度裁剪用于避免梯度爆炸
+
+设定一个超参数$\theta$
+$$
+g \gets \min(1, \frac{\theta}{\left \| g\right \|})g
+$$
+此处梯度的范数永远不会超过$\theta$，并且方向上不会发生改变，只是做了速度的限制
+
+```python
+def grad_clipping(net, theta):
+    params = [p for p in net.parameters() if p.requires_grad] # 取出所有需要优化的参数
+    # 求出L2范数
+    norm = torch.sqrt(sum(torch.sum((p.grad ** 2)) for p in params))
+    # 若超过theta 进行梯度裁剪
+    if norm > theta:
+        for param in params:
+            param.grad[:] *= theta / norm
+```
+
+
+
+如果不进行梯度裁剪
+
+![image-20240814210651906](./序列模型.assets/image-20240814210651906.png)
+
+直接爆了
+
+>   题外话：如果我们对输出结果进行relu一下，不做梯度裁剪也能成（
+
+
+
+#### 结果
+
+![image-20240814210540734](./序列模型.assets/image-20240814210540734.png)
+
+```python
+print(predict('time traveller', 200))
+'''
+time travellerit s against reason said tiens aine tile atout in time and any of the three dimensions they could re heatid and trive ri it filbes at fine tions in our on this be s aine thes of space and a focresy wi
+'''
+```
+
+还行（至少能输出正常的单词
